Add authenticated user api
